Fix: Jerking of the "#mfbpanel" panel when collapsing and expanding on the "Montage" page

--- a/web/skins/classic/css/base/views/montage.css
+++ b/web/skins/classic/css/base/views/montage.css
@@ -71,4 +71,6 @@
 #mfbpanel {
   padding-right: 5px;
   padding-left: 5px;
+  width: calc(100% - 25px);
+  float: left;
 }
